dyn-sched: basic activation behavious
-Activated tasks cease moving with current time
-One task duration is exceeded, converted to finished state
-Finished tasks are removed from the update flow

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,14 @@ input, label {
     border: solid 1px black;
 }
 
+.activeTask {
+    border: solid 1px blue;
+}
+
+.finishedTask {
+    border: solid 1px green;
+}
+
 .popup {
     border: solid 1px black;
     background-color: lightblue;
