dyn-sched: Automatic downtime block generation
-Tasks now always have "downtime" labelled tasks between them
-As long as the task exists within the schedule limits
-While head task is inactive, preceding downtime block will extend

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,10 @@ input, label {
     border: solid 1px green;
 }
 
+.downtimeTask {
+    border: solid 1px purple;
+}
+
 .popup {
     border: solid 1px black;
     background-color: lightblue;
