dyn-sched: Downtime measurement + Debug
-Fixed some downtime related bugs
 -Tasks now spawn at current time regardless of time since last finish
 -Intermittent downtime only created on new task creation
  -ie. gap from now -> prev finish not filled until new task appears
-Schedule start and end now decoupled from timeline drawing
 -New divs to indicate and new class "marker" for styling
-Time can be moved with arrow up or down if "debug" = true

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,13 @@ input, label {
     position: absolute;
 }
 
+.marker {
+    height: 1px;
+    position: absolute;
+    margin-left: 3px;
+    z-index: 1;
+}
+
 #addMenu {
     visibility: hidden;
 }
@@ -71,8 +78,9 @@ input, label {
 }
 
 #timeMarker {
-    height: 1px;
     background-color: red;
-    position: absolute;
-    margin: 3px;
+}
+
+#startMarker, #stopMarker {
+    background-color: black;
 }
