--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ input, label {
     background-color: lightblue;
     max-width: 200px;
     position: absolute;
+    z-index: 2;
 }
 
 .marker {
@@ -81,6 +82,6 @@ input, label {
     background-color: red;
 }
 
-#startMarker, #stopMarker {
+#startMarker, #stopMarker, #finishMarker {
     background-color: black;
 }
