--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,10 @@ input, label {
     border: solid 1px purple;
 }
 
+.editTask {
+    border: solid 1px red;
+}
+
 .popup {
     border: solid 1px black;
     background-color: lightblue;
