dyn-sched: Initial overtime implementation
-Task popup includes button for allowing OT
-If allowed, when finished, create a following OT task
-OT tasks don't finish naturally must be manually deactivated
 -Helpful for when tasks run slightly over and shouldn't create downtime
-Counter for overtime amount added
-NOTE: overtime tasks only need "finish" and "cancel" in popup
 -other popup options are still available but untested for now

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,10 @@ input, label {
     border: solid 1px purple;
 }
 
+.overtimeTask {
+    border: solid 1px yellowgreen;
+}
+
 .editTask {
     border: solid 1px red;
 }
